--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ vignettes/*.pdf
 
 # Cloud Build Key
 kfmapp-428ef08101fd.json
+
+# Notes for building and deploying docker app to gcloud
+Docker_Notes.docx
