--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
       - '-c'
       - >-
         docker pull
-        gcr.io/$PROJECT_ID/kfm-app@sha256:d413b5760d6c33891036fbd76437c34700e8172fb976408431469b2e3860d0ad
+        gcr.io/$PROJECT_ID/kfm-app:1.4
         || exit 0
     entrypoint: bash
   - name: gcr.io/cloud-builders/docker
@@ -15,7 +15,7 @@ steps:
       - .
       - '--cache-from'
       - >-
-        gcr.io/$PROJECT_ID/kfm-app@sha256:d413b5760d6c33891036fbd76437c34700e8172fb976408431469b2e3860d0ad
+        gcr.io/$PROJECT_ID/kfm-app:1.4
       - '-f'
       - Dockerfile
     id: Build
@@ -38,7 +38,7 @@ steps:
       - '--quiet'
     id: Deploy
     entrypoint: gcloud
-timeout: 3600s
+timeout: 6000s
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
 options:
